--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,10 +1,33 @@
-<h1>Sections#index</h1>
-<ul>
-  <% @sections.each do |section| %>
-    <li>
-      <a href="/sections/<%= section.id %>">
-        <%= section.title %>
-      </a>
-    </li>
-  <% end %>
-</ul>
+<p id="notice"><%= notice %></p>
+
+<h1>Sections</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Location</th>
+      <th>Title</th>
+      <th>Visible</th>
+      <th>Position</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @sections.each do |section| %>
+      <tr>
+        <td><%= section.location %></td>
+        <td><%= section.title %></td>
+        <td><%= section.visible %></td>
+        <td><%= section.position %></td>
+        <td><%= link_to 'Show', section %></td>
+        <td><%= link_to 'Edit', edit_section_path(section) %></td>
+        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Section', new_section_path %>
