--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,23 +2,24 @@
 
 <h1>Pages</h1>
 
-<table>
+<table class="table table-dark">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Section</th>
-      <th>Page type</th>
-      <th>Permalink</th>
-      <th>Visible</th>
-      <th>Position</th>
-      <th>Content</th>
-      <th colspan="3"></th>
+      <th scope="col">ID</th>
+      <th scope="col">Title</th>
+      <th scope="col">Section</th>
+      <th scope="col">Page Type</th>
+      <th scope="col">Permalink</th>
+      <th scope="col">Visible</th>
+      <th scope="col">Position</th>
+      <th scope="col">Content</th>
+      <th scope="col">Functions</th>
     </tr>
   </thead>
-
   <tbody>
     <% @pages.each do |page| %>
       <tr>
+        <th scope="row">1</th>
         <td><%= page.title %></td>
         <td><%= page.section_id %></td>
         <td><%= page.page_type %></td>
@@ -26,13 +27,14 @@
         <td><%= page.visible %></td>
         <td><%= page.position %></td>
         <td><%= page.content %></td>
-        <td><%= link_to 'Show', page %></td>
-        <td><%= link_to 'Edit', edit_page_path(page) %></td>
-        <td><%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', page, class: "btn btn-primary" %> |
+        <%= link_to 'Edit', edit_section_path(page), class: "btn btn-warning" %> |
+        <%= link_to 'Destroy', page, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
